GNOME Bugzilla – Bug 731968
hlsdemux: Fix decrypting fragments
Last modified: 2014-06-22 12:15:21 UTC
Created attachment 278838 [details] [review] Patch Only reset the decryption engine on the first buffer of a fragment, not again for the second buffer. This fixes corrupting the second buffer of a fragment. This happens because demux->starting_fragment is TRUE for the first two buffers of an encrypted fragment. This is because the first incoming buffer isn't actually processed, but stored away. Because demux->pending_buffer is NULL the very first time, demux->starting_fragment is still set to TRUE, causing the crypto stuff to be reset again before processing the second buffer.
Comment on attachment 278838 [details] [review] Patch Looks good, will push it tomorrow :) Thanks for the patch!
commit 78bae6c5ffdca54bf6a1a34840d29bfb9f87f82f Author: Thomas Bluemel <tbluemel@control4.com> Date: Fri Jun 20 08:20:55 2014 -0600 hlsdemux: Fix decrypting fragments Only reset the decryption engine on the first buffer of a fragment, not again for the second buffer. This fixes corrupting the second buffer of a fragment. https://bugzilla.gnome.org/show_bug.cgi?id=731968